# CGL

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
include/: cgl.hpp  cgl_audio.hpp  cgl_input.hpp  cgl_window.hpp
installer/: CGL-installer.iss
src/: audio.cpp  input.cpp  window.cpp
vcpkg/ports/cgl/: portfile.cmake  vcpkg.json
